test/invalid/builtins/string-replace.js
function f(p, r) { return 'hi'.replace(p, r); }
var g = function(p, r) { return 'hi'.replace(p, r); };
var s = 'abc'.replace('junk', 'punk');
var t = 'abd'.replace(/bd/, 'pink');
f(2,'a');
  
